--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                  <a href="competitiveProgramming.html" target="_blank">
                                     <div class="services color-5">
                                        <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile</h3>
+                                       <h3>Programming</h3><br> <h3>Profile</h3>
                                     </div>
                                  </a>
                               </div>
