--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                  <a href="webDev.html" target="_blank">
                                     <div class="services color-2">
                                        <span class="icon2"><i class="fa fa-code"></i></span>
-                                       <h3>Website<br> Designing</h3>
+                                       <h2>Website</h2><br> <h2>Designing</h2>
                                     </div>
                                  </a>
                               </div>
