--- a/competitiveProgramming.html
+++ b/competitiveProgramming.html
@@ -174,7 +174,7 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://twitter.com/Vinay_Somawat">
+                                 <a href="https://twitter.com/mohdaazam">
                                     <p style="color:rgb(3, 32, 61)">Twitter</p>
                                  </a>
                               </strong>
@@ -184,7 +184,7 @@
                          <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://www.facebook.com/vinay.somawat">
+                                 <a href="https://www.facebook.com/Mohd Aajam">
                                     <p style="color:darkblue">Facebook</p>
                                  </a>
                               </strong>
