--- a/competitiveProgramming.html
+++ b/competitiveProgramming.html
@@ -174,7 +174,7 @@
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <strong>
-                                 <a href="https://twitter.com/mohdaazam">
+                                 <a href="https://twitter.com/@aazamtagala>
                                     <p style="color:rgb(3, 32, 61)">Twitter</p>
                                  </a>
                               </strong>
